--- a/src/app/components/products/digital/digital-accessories/digital-accessories.component.scss
+++ b/src/app/components/products/digital/digital-accessories/digital-accessories.component.scss
@@ -1,3 +1,7 @@
+input[type="checkbox"]{
+    width: 20px; /*Desired width*/
+    height: 20px; /*Desired height*/
+  }
 .specValues{
     display: inline-block;
     border: 1px solid #f36f02;
