--- a/src/app/components/products/digital/digital-sub-category-list/digital-sub-category-list.component.html
+++ b/src/app/components/products/digital/digital-sub-category-list/digital-sub-category-list.component.html
@@ -9,8 +9,8 @@
                 <div class="card-body">
 
                     <div class="btn-popup pull-right">
-                        <button type="button" class="btn btn-secondary" data-toggle="modal" data-original-title="test"
-                            data-target="#exampleModal" (click)="open(content)">Add Sub Category</button>
+                        <!-- <button type="button" class="btn btn-secondary" data-toggle="modal" data-original-title="test"
+                            data-target="#exampleModal" (click)="open(content)">Add Sub Category</button> -->
                         
                     </div>
                     <div id="batchDelete" class="category-table custom-datatable">
