--- a/src/app/components/products/digital/digital-edit/digital-edit.component.html
+++ b/src/app/components/products/digital/digital-edit/digital-edit.component.html
@@ -1,5 +1,5 @@
 <div class="container-fluid">
-    <form enctype="multipart/form-data" [formGroup]="addProduct" (ngSubmit)="addProducts()">
+    <form enctype="multipart/form-data" [formGroup]="addProduct" (ngSubmit)="updateProducts()">
         <div class="row product-adding">
             <div class="col-xl-6">
                 <div class="card">
@@ -8,29 +8,46 @@
                     </div>
                     <div class="card-body">
                         <div class="digital-add needs-validation">
-                            <div class="form-group">
-                                <label class="col-form-label"><span>*</span> Category group</label>
-                                <select class="form-control" formControlName="mainCatName" (change)="getSubCategory()">
+                            <div class="form-group"  *ngFor="let c of categories">
+                                <label class="col-form-label" *ngIf="c.id==mainCatId"><span>*</span> Category group : {{c.main_cat_name}} <a (click)="open(editMainCatId);"><i class="fa fa-pencil"></i></a></label>
+                                <!-- <select class="form-control" formControlName="mainCatName" (change)="getSubCategory()">
                                     <option *ngFor="let c of categories" value="{{c.id}}">{{c.main_cat_name}}</option>
-                                </select>
+                                </select> -->
                             </div>
 
-                            <div class="form-group" *ngIf="addProduct.value.mainCatName">
-                                <label class="col-form-label"><span>*</span> Category name</label>
-                                <select class="form-control" formControlName="subCatId" (change)="getSpecsByCatId()">
+                            <div class="form-group" *ngFor="let sc of subCat">
+                                <label class="col-form-label" *ngIf="sc.cat_id==subCatId"><span>*</span> Category name: {{sc.cat_name}} <a (click)="open(editSubCatId);"><i class="fa fa-pencil"></i></a></label>
+                                <!-- <select class="form-control" formControlName="subCatId" (change)="getSpecsByCatId()">
                                     <option *ngFor="let sc of subCat[0].subItems" value="{{sc.cat_id}}">{{sc.cat_name}}</option>
-                                </select>
+                                </select> -->
                             </div>
 
-                            <div class="form-group" >
+                            <!-- <div class="form-group" >
                                 <label class="col-form-label"><span>*</span> cities</label>
                                 <select class="form-control" formControlName="cityId" multiple>
                                     <option *ngFor="let c of cities" value="{{c.city_id}}">{{c.city_name}}</option>
                                 </select>
+                            </div> -->
+                        </div>
+                    </div>
+                </div>
+
+                <div class="card">
+                    <div class="card-header">
+                        <h5>Choose Accessories</h5>
+                    </div>
+                    <div class="card-body">
+                        <div class="digital-add needs-validation">
+                            <div class="form-group">
+                                <label class="col-form-label"><span>*</span> Accessories <a (click)="open(editAccs);"><i class="fa fa-pencil"></i></a></label>
+                                <!-- <select class="form-control" formControlName="accessory" multiple>
+                                    <option *ngFor="let a of accessories"  value="{{a.id}}">{{a.acceesory_name}}</option>
+                                </select> -->
                             </div>
                         </div>
                     </div>
                 </div>
+
                 <div class="card">
                     <div class="card-header">
                         <h5>General</h5>
@@ -57,14 +74,14 @@
                                 <input class="form-control" formControlName="prodDescription" type="text" required="">
                             </div>
 
-                            <div class="form-group">
+                            <!-- <div class="form-group">
                                 <label for="validationTitle" class="col-form-label pt-0"><span>*</span> Product quantity</label>
                                 <input class="form-control" formControlName="prodQty" type="number" required="">
                             </div>
                             <div class="form-group">
                                 <label for="validationTitle" class="col-form-label pt-0"><span>*</span> Product delivery timeline</label>
                                 <input class="form-control" formControlName="deliveryTimeline" type="number" required="">
-                            </div>
+                            </div> -->
                             <div class="form-group">
                                 <label for="validationTitle" class="col-form-label pt-0"><span>*</span> Security deposit</label>
                                 <input class="form-control" formControlName="securityDeposit" type="number" required="">
@@ -73,14 +90,20 @@
                                 <label for="validationTitle" class="col-form-label pt-0"><span>*</span> Tenure base price</label>
                                 <input class="form-control" formControlName="tenureBasePrice" type="number" required="">
                             </div>
-                            <div class="form-group">
+                            <!-- <div class="form-group">
                                 <label for="validationTitle" class="col-form-label pt-0"><span>*</span> Priority</label>
                                 <input class="form-control" formControlName="priority" type="number" required="">
-                            </div>
+                            </div> -->
                             <div class="form-group">
+                                <label class="col-form-label"><span>*</span> Pricing scheme</label>
+                                <select class="form-control" formControlName="priority">
+                                    <option *ngFor="let ps of pricingSchemes" value="{{ps.id}}">{{ps.scheme_name}}</option>
+                                </select>
+                            </div>
+                            <!-- <div class="form-group">
                                 <label for="validationTitle" class="col-form-label pt-0"><span>*</span> Product image</label>
                                 <input type="file" id="product_image"  formControlName="prodImage"  multiple  />
-                            </div>
+                            </div> -->
 
                             <div class="form-group">
                                 <label class="col-form-label"><span>*</span> Product status</label>
@@ -106,12 +129,12 @@
                             </div> -->
 
                             
-                            <div class="form-group" *ngIf="addProduct.value.subCatId">
+                            <!-- <div class="form-group" *ngIf="addProduct.value.subCatId">
                                 <label class="col-form-label"><span>*</span> Brands</label>
                                 <select class="form-control" formControlName="brandId">
                                     <option *ngFor="let b of brands" value="{{b.brand_id}}">{{b.brand_name}}</option>
                                 </select>
-                            </div>
+                            </div> -->
                             
                             <!-- <div formArrayName="specs">
                                 <div class="form-group" *ngFor="let cs of catSpecs; let i = index;">
@@ -123,14 +146,19 @@
                                 <div class="form-group" *ngFor="let cs of catSpecs; let i = index;">
                                     <label class="col-form-label"><span>*</span> {{cs.spec_name}}</label>
                                     <select class="form-control" formControlName="{{cs.spec_id}}" >
-                                        <option *ngFor="let sv of cs.spec_id | specValues" value="{{sv.spec_value}}">{{sv.spec_value}}</option>
+                                        <option *ngFor="let sv of cs.spec_id | specValues"  [selected]="sv.spec_value | editSpecCheck: specsCheck">{{sv.spec_value}}</option>
                                     </select>
+                                    <!-- <div *ngFor="let sv of cs.spec_id | specValues">                                        
+                                        <input type="radio" name="cs.spec_id" class="form-check-input"  [checked]="sv.spec_value | editSpecCheck: specsCheck">
+                                        <label>{{sv.spec_value}}</label>
+                                    </div> -->
+                                    
                                 </div>
                             </div>
                             
-                                    <div *ngIf="prodRequied">All fields are required</div>
+                                    <!-- <div *ngIf="prodRequied">All fields are required</div> -->
                                     <!-- <div *ngIf="prodSuccessfull">Product added successfully</div> -->
-                                <button type="submit" class="btn btn-primary mr-1">Add</button>                        
+                                <button type="submit" class="btn btn-primary mr-1">Save</button>                        
                         </div>
                     </div>
                 </div>
@@ -152,23 +180,119 @@
                         </div>
                     </div>
                 </div> -->
-                <div class="card">
-                    <div class="card-header">
-                        <input type="file" (change)="onFileChange($event)" />
-                        <div id="output"></div>
-                        <h5>Import products</h5>
-                    </div>
-                    <div class="card-body">
-                        <div class="digital-add needs-validation">
-                            <div class="form-group mb-0">
-                                <div class="product-buttons text-center">
-                                    <button type="button" class="btn btn-primary mr-1" (click)="importExcelData()">Import</button>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
             </div>
         </div>
     </form>
 </div>
+
+
+<!--Modals-->
+
+<ng-template #editMainCatId let-modal>
+    <div class="modal-header">
+        <h5 class="modal-title f-w-600" id="exampleModalLabel">Edit Category group</h5>
+        <button type="button" class="close" aria-label="Close"
+            (click)="modal.dismiss('Cross click')">
+            <span aria-hidden="true">&times;</span>
+        </button>
+    </div>
+    <div class="modal-body">
+        <div class="table-responsive">
+            <table class="table table-bordered">
+                <thead>
+                    <th>Categroy group</th>
+                    <th>Action</th>
+                </thead>
+                <tbody *ngFor="let c of categories">
+                    <td >
+                        {{c.main_cat_name}}
+                    </td>
+                    <td>
+                        <div class="form-check">
+                            <input type="radio" name="mainCatName" class="form-check-input" (change)="mainCatNameActions($event,c.id)" [checked]="mainCatId == c.id">
+                        </div>
+                    </td>
+                </tbody>
+            </table>
+        </div>
+        <!-- <div class="specValues" *ngFor="let sv of tenureEdit.specId | tenurePriority">{{sv.tenure}} {{sv.tenure_period}}</div> -->
+    </div>
+    <div class="modal-footer">
+        <button type="button" class="btn btn-primary"  >Save</button>
+        <button class="btn btn-secondary" type="button" data-dismiss="modal"
+            (click)="modal.dismiss('Cross click')">Close</button>
+    </div>
+</ng-template>
+
+<ng-template #editSubCatId let-modal>
+    <div class="modal-header">
+        <h5 class="modal-title f-w-600" id="exampleModalLabel">Edit Category</h5>
+        <button type="button" class="close" aria-label="Close"
+            (click)="modal.dismiss('Cross click')">
+            <span aria-hidden="true">&times;</span>
+        </button>
+    </div>
+    <div class="modal-body">
+        <div class="table-responsive">
+            <table class="table table-bordered">
+                <thead>
+                    <th>Categroy </th>
+                    <th>Action</th>
+                </thead>
+                <tbody *ngFor="let sc of subCat">
+                    <td >
+                        {{sc.cat_name}}
+                    </td>
+                    <td>
+                        <div class="form-check">
+                            <input type="radio" name="subCatName" class="form-check-input" (change)="subCatNameActions($event,sc.cat_id)" [checked]="subCatId == sc.cat_id">
+                        </div>
+                    </td>
+                </tbody>
+            </table>
+        </div>
+        <!-- <div class="specValues" *ngFor="let sv of tenureEdit.specId | tenurePriority">{{sv.tenure}} {{sv.tenure_period}}</div> -->
+    </div>
+    <div class="modal-footer">
+        <button type="button" class="btn btn-primary"  >Save</button>
+        <button class="btn btn-secondary" type="button" data-dismiss="modal"
+            (click)="modal.dismiss('Cross click')">Close</button>
+    </div>
+</ng-template>
+
+<ng-template #editAccs let-modal>
+    <div class="modal-header">
+        <h5 class="modal-title f-w-600" id="exampleModalLabel">Edit accessories</h5>
+        <button type="button" class="close" aria-label="Close"
+            (click)="modal.dismiss('Cross click')">
+            <span aria-hidden="true">&times;</span>
+        </button>
+    </div>
+    <div class="modal-body">
+        <div class="table-responsive">
+            <table class="table table-bordered">
+                <thead>
+                    <th>Accessory</th>
+                    <th>Action</th>
+                </thead>
+                <tbody *ngFor="let a of accessories">
+                    <td >
+                        {{a.acceesory_name}}
+                    </td>
+                    <td>
+                        <div class="form-check">
+                            <input type="checkbox" class="form-check-input" (change)="accsActions($event,a.id)" [checked]="a.checked">
+                        </div>
+                        <!-- <input type="checkbox" [checked]="at.checked"> -->
+                    </td>
+                </tbody>
+            </table>
+        </div>
+        <!-- <div class="specValues" *ngFor="let sv of tenureEdit.specId | tenurePriority">{{sv.tenure}} {{sv.tenure_period}}</div> -->
+    </div>
+    <div class="modal-footer">
+        <!-- <button type="button" class="btn btn-primary"  (click)="reload()">Save</button> -->
+        <button class="btn btn-secondary" type="button" data-dismiss="modal"
+            (click)="modal.dismiss('Cross click')">Close</button>
+    </div>
+</ng-template>
