--- a/src/app/components/products/digital/digital-sub-category/digital-sub-category.component.scss
+++ b/src/app/components/products/digital/digital-sub-category/digital-sub-category.component.scss
@@ -1,3 +1,41 @@
 .specNames{
     height:300px !important;
 }
+
+input[type="checkbox"]{
+    width: 20px; /*Desired width*/
+    height: 20px; /*Desired height*/
+  }
+.specValues{
+    display: inline-block;
+    border: 1px solid #f36f02;
+    padding:1%;
+    margin-right:4px;
+    margin-bottom: 10px;
+}
+.editSpecValues{
+    display: block;
+    border-bottom: 1px solid #e2e2e2;
+    padding:1%;
+    margin-right:4px;
+    margin-bottom: 10px;
+}
+
+.specifications{
+    table{
+        tbody{
+            td{
+                a{
+                    font-size: 25px;
+                    color: #f36f02;
+                }
+            }
+            .specValues{
+                display: inline-block;
+                border: 1px solid #f36f02;
+                padding:1%;
+                margin-right:4px;
+            }
+        }
+    }
+}
