--- a/src/app/components/products/digital/digital-add/digital-add.component.html
+++ b/src/app/components/products/digital/digital-add/digital-add.component.html
@@ -100,10 +100,10 @@
                                 <label for="validationTitle" class="col-form-label pt-0"><span>*</span> Priority</label>
                                 <input class="form-control" formControlName="priority" type="number" required="">
                             </div> -->
-                            <!-- <div class="form-group">
+                            <div class="form-group">
                                 <label for="validationTitle" class="col-form-label pt-0"><span>*</span> Product image</label>
-                                <input type="file" id="product_image" (change)="imageChange($event)"  formControlName="prodImage"  multiple  />
-                            </div> -->
+                                <input type="file" id="product_image" (change)="imageChange($event)"  />
+                            </div>
 
                             <div class="form-group">
                                 <label class="col-form-label"><span>*</span> Product status</label>
